--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fantascivolizia",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Phoenix",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
